--- a/templates/header.html
+++ b/templates/header.html
@@ -1,67 +1,74 @@
 <!-- Navbar -->
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <!-- Container wrapper -->
-  <div class="container">
-    <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="{% url 'home' %}">
-      <img
-        src="{% static "img/log.p.png"%}"
-        height="26"
-        alt="MDB Logo"
-        loading="lazy"
-        style="margin-top: -1px"
-      />
-    </a>
-
-    <button
-    class="navbar-toggler"
-    type="button"
-    data-mdb-toggle="collapse"
-    data-mdb-target="#navbarButtonsExample"
-    aria-controls="navbarButtonsExample"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <i class="fas fa-bars"></i>
-  </button>
-
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarButtonsExample">
-      <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Головна</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Лікарі</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Записи</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'services' %}">Послуги</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about'%}">Про нас</a>
-        </li>
-
-
-      </ul>
-      <!-- Left links -->
-
-      <div class="d-flex align-items-center justify-content-center">
-        <a type="button" class="btn btn-primary me-3 log_btn" href="{% url 'login'%}">
-          Вхід / Реєстрація
+    <!-- Container wrapper -->
+    <div class="container">
+        <!-- Navbar brand -->
+        <a class="navbar-brand me-2" href="{% url 'home' %}">
+            <img
+                    src="{% static "img/log.p.png" %}"
+                    height="26"
+                    alt="MDB Logo"
+                    loading="lazy"
+                    style="margin-top: -1px"
+            />
         </a>
-      </div>
+
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-mdb-toggle="collapse"
+                data-mdb-target="#navbarButtonsExample"
+                aria-controls="navbarButtonsExample"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarButtonsExample">
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Головна</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Лікарі</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Записи</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'services' %}">Послуги</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">Про нас</a>
+                </li>
+
+
+            </ul>
+            <!-- Left links -->
+
+            <div class="d-flex align-items-center justify-content-center">
+                {% if user.is_authenticated %}
+                    <p>{{ user.first_name }}</p>
+                    <a type="button" class="btn btn-primary me-3 log_btn" href="{% url 'logout' %}">
+                        Вихід
+                    </a>
+                {% else %}
+                    <a type="button" class="btn btn-primary me-3 log_btn" href="{% url 'login' %}">
+                        Вхід / Реєстрація
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+        <!-- Collapsible wrapper -->
     </div>
-    <!-- Collapsible wrapper -->
-  </div>
-  <!-- Container wrapper -->
+    <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
