--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,42 +1,45 @@
 .login {
-  max-width: 600px;
+    max-width: 600px;
 }
+
 .carousel {
-  max-height: 645px;
+    max-height: 645px;
 }
 
 .car_img {
-  filter: brightness(40%);
+    filter: brightness(40%);
 }
 
 .home_img {
-  max-height: 500px;
-}
-#btn-back-to-top {
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  display: none;
+    max-height: 500px;
 }
 
-* {
-  font-family: montserrat;
+#btn-back-to-top {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    display: none;
 }
+
+/** {*/
+/*  font-family: montserrat;*/
+/*}*/
 
 .navbar-nav a {
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: 500;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
 @media only screen and (max-width: 767px) {
-  .navbar-nav {
-    text-align: center;
-  }
-  
+    .navbar-nav {
+        text-align: center;
+    }
+
 }
+
 .input_block {
     width: 100%;
     max-height: 420px;
