--- a/templates/doctors/index.html
+++ b/templates/doctors/index.html
@@ -1,23 +1,19 @@
 {% extends 'layout.html' %}
+{% load static %}
+{% block style %}
+    <link rel="stylesheet" href="{% static "css/doctor/doctors.css" %}">
+{% endblock %}
 
 {% block content %}
-    <form method="GET" action="{% url 'doctors' %}">
-        <input type="text" name="q" placeholder="Search by name" value="{{ request.GET.q }}">
-        <select name="specialty">
-            <option value="">Всі спеціальності</option>
-            {% for specialty in specialties %}
-                <option value="{{ specialty.id }}"
-                        {% if specialty.id == request.GET.specialty %}selected{% endif %}>{{ specialty.specialty }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Filter</button>
-    </form>
-    <ul>
-        {% for doctor in doctors %}
-            <li>{{ doctor.user.first_name }} {{ doctor.user.last_name }} - {{ doctor.specialty.specialty }}</li>
-        {% empty %}
-            <li>No doctors found.</li>
-        {% endfor %}
-    </ul>
+    <div class="container mt-4">
+
+        <form method="GET" action="{% url 'doctors' %}">
+            {% include "widgets/search_doctor.html" %}
+
+            <div class="container mt-2">
+
+                {% include "widgets/doctors_cards.html" %}
+
+            </div>
 
 {% endblock %}
