--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,99 +1,209 @@
-<!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="">
-    <!-- Footer -->
-    <footer class="text-center text-white bg-primary">
-      <!-- Grid container -->
-      <div class="container">
-        <!-- Section: Links -->
-        <section class="mt-5">
-          <!-- Grid row-->
-          <div class="row text-center d-flex justify-content-center pt-5">
-            <!-- Grid column -->
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Про нас</a>
-              </h6>
+{% load static %}
+
+{# variant 1 #}
+{#<div class="">#}
+{#    <!-- Footer -->#}
+{#    <footer class="text-center text-white bg-primary">#}
+{#        <!-- Grid container -->#}
+{#        <div class="container">#}
+{#            <!-- Section: Links -->#}
+{#            <section class="mt-5">#}
+{#                <!-- Grid row-->#}
+{#                <div class="row text-center d-flex justify-content-center pt-5">#}
+{#                    <!-- Grid column -->#}
+{#                    <div class="col-md-2">#}
+{#                        <h6 class="text-uppercase font-weight-bold">#}
+{#                            <a href="#!" class="text-white">Про нас</a>#}
+{#                        </h6>#}
+{#                    </div>#}
+{#                    <!-- Grid column -->#}
+{##}
+{#                    <!-- Grid column -->#}
+{#                    <div class="col-md-2">#}
+{#                        <h6 class="text-uppercase font-weight-bold">#}
+{#                            <a href="#!" class="text-white">Лікарі</a>#}
+{#                        </h6>#}
+{#                    </div>#}
+{#                    <!-- Grid column -->#}
+{##}
+{#                    <!-- Grid column -->#}
+{#                    <div class="col-md-2">#}
+{#                        <h6 class="text-uppercase font-weight-bold">#}
+{#                            <a href="#!" class="text-white">Послуги</a>#}
+{#                        </h6>#}
+{#                    </div>#}
+{#                    <!-- Grid column -->#}
+{##}
+{#                    <!-- Grid column -->#}
+{##}
+{#                    <!-- Grid column -->#}
+{#                </div>#}
+{#                <!-- Grid row-->#}
+{#            </section>#}
+{#            <!-- Section: Links -->#}
+{##}
+{#            <hr class="my-5"/>#}
+{##}
+{#            <!-- Section: Text -->#}
+{#            <section class="mb-5">#}
+{#                <div class="row d-flex justify-content-center">#}
+{#                    <div class="col-lg-8">#}
+{#                        <p>#}
+{#                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt#}
+{#                            distinctio earum repellat quaerat voluptatibus placeat nam,#}
+{#                            commodi optio pariatur est quia magnam eum harum corrupti#}
+{#                            dicta, aliquam sequi voluptate quas.#}
+{#                        </p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </section>#}
+{#            <!-- Section: Text -->#}
+{##}
+{#            <!-- Section: Social -->#}
+{#            <section class="text-center mb-5">#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-facebook-f"></i>#}
+{#                </a>#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-twitter"></i>#}
+{#                </a>#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-google"></i>#}
+{#                </a>#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-instagram"></i>#}
+{#                </a>#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-linkedin"></i>#}
+{#                </a>#}
+{#                <a href="" class="text-white me-4">#}
+{#                    <i class="fab fa-github"></i>#}
+{#                </a>#}
+{#            </section>#}
+{#            <!-- Section: Social -->#}
+{#        </div>#}
+{#        <!-- Grid container -->#}
+{##}
+{#        <!-- Copyright -->#}
+{#        <div#}
+{#                class="text-center p-3"#}
+{#                style="background-color: rgba(0, 0, 0, 0.2)"#}
+{#        >#}
+{#            © 2020 Copyright:#}
+{#            <a class="text-white" href="https://mdbootstrap.com/"#}
+{#            >MDBootstrap.com</a#}
+{#            >#}
+{#        </div>#}
+{#        <!-- Copyright -->#}
+{#    </footer>#}
+{#    <!-- Footer -->#}
+{#</div>#}
+<!-- End of .container -->
+
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted pt-1">
+
+    <section class="p-4 border-bottom">
+        <form class="w-50 center" action="">
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+                <!--Grid column-->
+                <div class="col-auto">
+                    <p class="pt-2 text-primary">
+                        <strong>Будьте в курсі - підпишіться зараз!</strong>
+                    </p>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-md-5 col-12">
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" id="form5Example2" class="form-control"/>
+                        <label class="form-label" for="form5Example2">Електронна пошта</label>
+                    </div>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-auto">
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary mb-4">
+                        Підписатися
+                    </button>
+                </div>
+                <!--Grid column-->
             </div>
-            <!-- Grid column -->
-  
-            <!-- Grid column -->
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Лікарі</a>
-              </h6>
+            <!--Grid row-->
+        </form>
+    </section>
+
+    <!-- Section: Links  -->
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <!-- Content -->
+                    <img src="{% static "img/logo-black.svg" %}" width="150px" alt="">
+                    <p class="mt-1">
+                        Одужуйте швидше з Medicine. Професійний догляд, швидкого одужання.
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <a href="{% url "doctors" %}">Лікарі</a>
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">Angular</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">React</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Vue</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Laravel</a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                    <p>
+                        <i class="fas fa-envelope me-3"></i>
+                        info@example.com
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                </div>
+                <!-- Grid column -->
             </div>
-            <!-- Grid column -->
-  
-            <!-- Grid column -->
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Послуги</a>
-              </h6>
-            </div>
-            <!-- Grid column -->
-  
-            <!-- Grid column -->
-            
-            <!-- Grid column -->
-          </div>
-          <!-- Grid row-->
-        </section>
-        <!-- Section: Links -->
-  
-        <hr class="my-5" />
-  
-        <!-- Section: Text -->
-        <section class="mb-5">
-          <div class="row d-flex justify-content-center">
-            <div class="col-lg-8">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                distinctio earum repellat quaerat voluptatibus placeat nam,
-                commodi optio pariatur est quia magnam eum harum corrupti
-                dicta, aliquam sequi voluptate quas.
-              </p>
-            </div>
-          </div>
-        </section>
-        <!-- Section: Text -->
-  
-        <!-- Section: Social -->
-        <section class="text-center mb-5">
-          <a href="" class="text-white me-4">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-github"></i>
-          </a>
-        </section>
-        <!-- Section: Social -->
-      </div>
-      <!-- Grid container -->
-  
-      <!-- Copyright -->
-      <div
-           class="text-center p-3"
-           style="background-color: rgba(0, 0, 0, 0.2)"
-           >
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/"
-           >MDBootstrap.com</a
-          >
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-  </div>
-  <!-- End of .container -->
+            <!-- Grid row -->
+        </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2023 Авторське право:
+        <a class="text-reset fw-bold" href="{% url "home" %}">medicine.com</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
+
+{# variant 2 #}
