--- a/templates/home/widgets/home_carousel.html
+++ b/templates/home/widgets/home_carousel.html
@@ -2,94 +2,101 @@
 
 <!-- Carousel wrapper -->
 <div
-  id="carouselBasicExample"
-  class="carousel slide carousel-fade"
-  data-mdb-ride="carousel"
+        id="carouselBasicExample"
+        class="carousel slide carousel-fade"
+        data-mdb-ride="carousel"
 >
-  <!-- Indicators -->
-  <div class="carousel-indicators">
-    <button
-      type="button"
-      data-mdb-target="#carouselBasicExample"
-      data-mdb-slide-to="0"
-      class="active"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    <button
-      type="button"
-      data-mdb-target="#carouselBasicExample"
-      data-mdb-slide-to="1"
-      aria-label="Slide 2"
-    ></button>
-    <button
-      type="button"
-      data-mdb-target="#carouselBasicExample"
-      data-mdb-slide-to="2"
-      aria-label="Slide 3"
-    ></button>
-  </div>
-
-  <!-- Inner -->
-  <div class="carousel-inner">
-    <!-- Single item -->
-    <div class="carousel-item active carousel">
-      <img
-        src="{% static 'img/carousel_image_1.jpg' %}"
-        class="d-block w-100 car_img"
-        alt="Sunset Over the City"
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-      </div>
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+        <button
+                type="button"
+                data-mdb-target="#carouselBasicExample"
+                data-mdb-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+        ></button>
+        <button
+                type="button"
+                data-mdb-target="#carouselBasicExample"
+                data-mdb-slide-to="1"
+                aria-label="Slide 2"
+        ></button>
+        <button
+                type="button"
+                data-mdb-target="#carouselBasicExample"
+                data-mdb-slide-to="2"
+                aria-label="Slide 3"
+        ></button>
     </div>
 
-    <!-- Single item -->
-    <div class="carousel-item carousel">
-      <img
-        src="{% static 'img/carousel_image_2.jpg' %}"
-        class="d-block w-100 car_img"
-        alt="Sunset Over the City"
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-    </div>
+    <!-- Inner -->
+    <div class="carousel-inner">
+        <!-- Single item -->
+        <div class="carousel-item active carousel">
+            <img
+                    src="{% static 'img/carousel_image_1.jpg' %}"
+                    class="d-block w-100 car_img"
+                    alt="Sunset Over the City"
+            />
+            <div class="carousel-caption d-none d-md-block">
+                <h4 class="mb-5">"Здоров'я - це найбільша цінність в житті. Ми допоможемо вам зберегти його!"</h4>
+            </div>
+        </div>
 
-    <!-- Single item -->
-    <div class="carousel-item carousel">
-      <img
-        src="{% static 'img/carousel_image_3.jpg' %}"
-        class="d-block w-100 car_img"
-        alt="Sunset Over the City"
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-      </div>
-    </div>
-  </div>
-  <!-- Inner -->
+        <!-- Single item -->
+        <div class="carousel-item carousel">
+            <img
+                    src="{% static 'img/carousel_image_2.jpg' %}"
+                    class="d-block w-100 car_img"
+                    alt="Sunset Over the City"
+            />
+            <div class="carousel-caption d-none d-md-block">
+                <h4 class="mb-5">Наші лікарі - це команда професіоналів, які завжди готові
+                    допомогти
+                    вам з
+                    будь-якими проблемами зі
+                    здоров'ям.</h4>
+            </div>
+        </div>
 
-  <!-- Controls -->
-  <button
-    class="carousel-control-prev"
-    type="button"
-    data-mdb-target="#carouselBasicExample"
-    data-mdb-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button
-    class="carousel-control-next"
-    type="button"
-    data-mdb-target="#carouselBasicExample"
-    data-mdb-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+        <!-- Single item -->
+        <div class="carousel-item carousel">
+            <img
+                    src="{% static 'img/carousel_image_3.jpg' %}"
+                    class="d-block w-100 car_img"
+                    alt="Sunset Over the City"
+            />
+            <div class="carousel-caption d-none d-md-block">
+
+                <h4 class="mb-5">"Ми прагнемо до того, щоб кожен наш пацієнт отримав найвищу якість медичної допомоги та
+                    повний
+                    спектр
+                    послуг."
+                </h4
+                >
+            </div>
+        </div>
+    </div>
+    <!-- Inner -->
+
+    <!-- Controls -->
+    <button
+            class="carousel-control-prev"
+            type="button"
+            data-mdb-target="#carouselBasicExample"
+            data-mdb-slide="prev"
+    >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+            class="carousel-control-next"
+            type="button"
+            data-mdb-target="#carouselBasicExample"
+            data-mdb-slide="next"
+    >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
