--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,15 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
 
 
-    <!-- Font Awesome -->
     <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <!-- Google Fonts -->
     <link
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -17,15 +17,17 @@
     />
     <!-- MDB -->
     <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
             rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-          integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    {% comment %} <link rel="stylesheet" href="  {% static "css/bootstrap.css" %}"> {% endcomment %}
+
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-    {% block style %}{% endblock %}
+    <link rel="stylesheet" href="{% static "css/messages.css" %}">
+    {% block style %} {% endblock %}
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -33,16 +35,27 @@
 
 
 {% include "header.html" %}
-{% block content %} {% endblock %}
+<div class="content">
+    {% block content %} {% endblock %}
+</div>
+
+
+{% include "messages.html" %}
+
 {% include "footer.html" %}
-{% include "btn_up.html" %}
+{% include "widgets/btn_call.html" %}
+{% include "widgets/btn_up.html" %}
 
 
+<script src="{% static "js/msg.js" %}"></script>
 <script
         type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
 ></script>
+<script src="https://kit.fontawesome.com/89c5ec43ed.js" crossorigin="anonymous"></script>
 {% block js %}{% endblock %}
+<script src="{% static "js/wow.min.js" %}"></script>
+<script src="{% static "js/main.js" %}"></script>
 <script src="{% static 'js/btn_up.js' %}"></script>
 </body>
 
