--- a/templates/doctors/index.html
+++ b/templates/doctors/index.html
@@ -15,5 +15,8 @@
                 {% include "widgets/doctors_cards.html" %}
 
             </div>
+        </form>
+        {% include "widgets/pagination.html" %}
+    </div>
 
 {% endblock %}
