--- a/templates/widgets/doctors_cards.html
+++ b/templates/widgets/doctors_cards.html
@@ -1,6 +1,6 @@
 <div class="wrap">
 
-    {% for doc in doctors %}
+    {% for doc in page_obj %}
 
         <div class="box wow animate__animated animate__fadeInLeft"
              data-wow-duration="{% cycle '1.25s' '1s' '0.75s' '0.5s' %}">
