--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background: hsl(204, 37%, 92%);
+}
+
 .content {
     min-height: 430px;
 }
@@ -116,6 +120,7 @@
 
 .my_toast {
     position: absolute;
+    z-index: 1;
     top: 30px;
     right: 30px;
     border-radius: 12px;
@@ -257,5 +262,10 @@
     border-radius: 6px;
     background: #fff;
     box-shadow: 0 0.8rem 2rem rgba(90, 97, 129, 0.05);
+}
+
+.input_error {
+    border: 1px red;
+    border-radius: 3px;
 }
 
