--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -108,6 +108,7 @@
             <button type="submit" class="btn btn-primary btn-block mb-4 log_btn">Зареєструватися</button>
 
             <div class="text-center">
+                <p>Зареєструватися як <a href="{% url 'doc_registration' %}">Лікар</a></p>
                 <p>Вже зареєстровані ? <a href="{% url 'login' %}">Вхід</a></p>
             </div>
 
