--- a/templates/widgets/doctors_cards.html
+++ b/templates/widgets/doctors_cards.html
@@ -24,7 +24,7 @@
         </div>
 
     {% empty %}
-        nothing
+        <h2 class="center">Наразі лікарів не додано</h2>
 
     {% endfor %}
 
