--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,6 +56,7 @@
 {% block js %}{% endblock %}
 <script src="{% static "js/wow.min.js" %}"></script>
 <script src="{% static "js/main.js" %}"></script>
+<script src="{% static "js/input.js" %}"></script>
 <script src="{% static 'js/btn_up.js' %}"></script>
 </body>
 
