Doctor add functional

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,105 +1,5 @@
 {% load static %}
 
-{# variant 1 #}
-{#<div class="">#}
-{#    <!-- Footer -->#}
-{#    <footer class="text-center text-white bg-primary">#}
-{#        <!-- Grid container -->#}
-{#        <div class="container">#}
-{#            <!-- Section: Links -->#}
-{#            <section class="mt-5">#}
-{#                <!-- Grid row-->#}
-{#                <div class="row text-center d-flex justify-content-center pt-5">#}
-{#                    <!-- Grid column -->#}
-{#                    <div class="col-md-2">#}
-{#                        <h6 class="text-uppercase font-weight-bold">#}
-{#                            <a href="#!" class="text-white">Про нас</a>#}
-{#                        </h6>#}
-{#                    </div>#}
-{#                    <!-- Grid column -->#}
-{##}
-{#                    <!-- Grid column -->#}
-{#                    <div class="col-md-2">#}
-{#                        <h6 class="text-uppercase font-weight-bold">#}
-{#                            <a href="#!" class="text-white">Лікарі</a>#}
-{#                        </h6>#}
-{#                    </div>#}
-{#                    <!-- Grid column -->#}
-{##}
-{#                    <!-- Grid column -->#}
-{#                    <div class="col-md-2">#}
-{#                        <h6 class="text-uppercase font-weight-bold">#}
-{#                            <a href="#!" class="text-white">Послуги</a>#}
-{#                        </h6>#}
-{#                    </div>#}
-{#                    <!-- Grid column -->#}
-{##}
-{#                    <!-- Grid column -->#}
-{##}
-{#                    <!-- Grid column -->#}
-{#                </div>#}
-{#                <!-- Grid row-->#}
-{#            </section>#}
-{#            <!-- Section: Links -->#}
-{##}
-{#            <hr class="my-5"/>#}
-{##}
-{#            <!-- Section: Text -->#}
-{#            <section class="mb-5">#}
-{#                <div class="row d-flex justify-content-center">#}
-{#                    <div class="col-lg-8">#}
-{#                        <p>#}
-{#                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt#}
-{#                            distinctio earum repellat quaerat voluptatibus placeat nam,#}
-{#                            commodi optio pariatur est quia magnam eum harum corrupti#}
-{#                            dicta, aliquam sequi voluptate quas.#}
-{#                        </p>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </section>#}
-{#            <!-- Section: Text -->#}
-{##}
-{#            <!-- Section: Social -->#}
-{#            <section class="text-center mb-5">#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-facebook-f"></i>#}
-{#                </a>#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-twitter"></i>#}
-{#                </a>#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-google"></i>#}
-{#                </a>#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-instagram"></i>#}
-{#                </a>#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-linkedin"></i>#}
-{#                </a>#}
-{#                <a href="" class="text-white me-4">#}
-{#                    <i class="fab fa-github"></i>#}
-{#                </a>#}
-{#            </section>#}
-{#            <!-- Section: Social -->#}
-{#        </div>#}
-{#        <!-- Grid container -->#}
-{##}
-{#        <!-- Copyright -->#}
-{#        <div#}
-{#                class="text-center p-3"#}
-{#                style="background-color: rgba(0, 0, 0, 0.2)"#}
-{#        >#}
-{#            © 2020 Copyright:#}
-{#            <a class="text-white" href="https://mdbootstrap.com/"#}
-{#            >MDBootstrap.com</a#}
-{#            >#}
-{#        </div>#}
-{#        <!-- Copyright -->#}
-{#    </footer>#}
-{#    <!-- Footer -->#}
-{#</div>#}
-<!-- End of .container -->
-
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted pt-1">
@@ -120,8 +20,8 @@
                 <div class="col-md-5 col-12">
                     <!-- Email input -->
                     <div class="form-outline mb-4">
-                        <input type="email" id="form5Example2" name="email" class="form-control"/>
-                        <label class="form-label" for="form5Example2">Електронна пошта</label>
+                        <input type="email" id="id_mailing" name="email" class="form-control"/>
+                        <label class="form-label" for="id_mailing">Електронна пошта</label>
                     </div>
                 </div>
                 <!--Grid column-->
