--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,7 @@
     />
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="{% static "css/messages.css" %}">
+    <link rel="stylesheet" href="{% static "css/slider.css" %}">
     {% block style %} {% endblock %}
     <meta charset="UTF-8">
     <title>Title</title>
@@ -47,7 +48,6 @@
 {% include "widgets/btn_up.html" %}
 
 
-<script src="{% static "js/msg.js" %}"></script>
 <script
         type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
@@ -58,6 +58,9 @@
 <script src="{% static "js/main.js" %}"></script>
 <script src="{% static "js/input.js" %}"></script>
 <script src="{% static 'js/btn_up.js' %}"></script>
+<script src="{% static 'js/msg.js' %}"></script>
+<script src="{% static 'js/sections.js' %}"></script>
+
 </body>
 
 </html>
