--- a/templates/reset_password/change_password.html
+++ b/templates/reset_password/change_password.html
@@ -9,25 +9,18 @@
             {% csrf_token %}
             <p class="text-center">Введіть новий пароль</p>
             {% csrf_token %}
-            <div class="form-outline mb-4">
+            <div class="form-outline bg-white mb-4">
                 {% render_field form.password class+="form-control" %}
                 <label class="form-label" for="form2Example2">Пароль</label>
             </div>
 
-            <div class="form-outline mb-4">
+            <div class="form-outline bg-white mb-4">
                 {% render_field form.confirm_password class+="form-control" %}
                 <label class="form-label" for="form2Example2">Пароль</label>
             </div>
             <!-- Submit button -->
             <button type="submit" class="btn btn-primary btn-block mb-4">Надіслати</button>
 
-            <!-- Error message -->
-            {% if error_msg %}
-                <div class="text-center error-msg">
-                    <i class="fa fa-times-circle"></i>
-                    {{ error_msg }}
-                </div>
-            {% endif %}
         </form>
     </div>
 {% endblock %}
