--- a/static/css/doctor/doctors.css
+++ b/static/css/doctor/doctors.css
@@ -72,7 +72,10 @@ a {
     background: #FFFFFF;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.12);
     border-radius: 6px;
+    transition: 0.3s;
+
 }
+
 
 .box-top {
     display: flex;
