--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,3 +269,15 @@ body {
     border-radius: 3px;
 }
 
+.txt {
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+.sections-i {
+    font-size: 2.5em;
+    text-align: center;
+    width: 100%;
+}
+
+
