--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -6,12 +6,16 @@
 
     <div class="container login d-flex justify-content-center align-items-center">
 
-        <form class="reg pt-5 {% if form.errors %}
+        <div>
+            <img class="d-none d-xxl-block" src="{% static "img/svg/sv8.svg" %}" height="500" alt="">
+        </div>
+
+        <form class="reg pt-5 col-8 col-xl-4 {% if form.errors %}
         was-validated
         {% endif %} " method="post">
             {% csrf_token %}
-            <p class="text-center">Реєстрація</p>
-            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <h2 class="text-center mb-4 fw-bold">Реєстрація</h2>
+
             <div class="row mb-4">
                 <div class="col">
                     <div class="form-outline">
@@ -77,7 +81,7 @@
             <p>Стать</p>
 
 
-            {% render_field form.gender placeholder="Стать" class+="form-control form-outline mb-4" %}
+            {% render_field form.gender placeholder="Стать" class+="form-control mb-4" %}
 
 
             <!-- blood input -->
@@ -85,16 +89,16 @@
             <p>Група крові</p>
 
 
-            {% render_field form.blood_type placeholder="Тип крові" class+="form-control form-outline mb-4" %}
+            {% render_field form.blood_type placeholder="Тип крові" class+="form-control mb-4" %}
 
             <!-- date input -->
 
             <p>Рік народження</p>
 
             {% if form.errors.date_of_birth %}
-                {% render_field form.date_of_birth placeholder="Рік" type="date" class+="form-control form-outline mb-4 input-blank" %}
+                {% render_field form.date_of_birth placeholder="Рік" type="date" class+="form-control mb-4 input-blank" %}
             {% else %}
-                {% render_field form.date_of_birth placeholder="Рік" type="date" class+="form-control form-outline mb-4" %}
+                {% render_field form.date_of_birth placeholder="Рік" type="date" class+="form-control mb-4" %}
             {% endif %}
 
 
@@ -113,6 +117,10 @@
             </div>
 
         </form>
+
+        <div>
+            <img class="d-none d-xxl-block" src="{% static "img/svg/sv9.svg" %}" height="500" alt="">
+        </div>
 
     </div>
 {% endblock %}
